[gd_scene load_steps=11 format=3 uid="uid://c0aq0xjtixkkx"]

[ext_resource type="Script" path="res://Code/InterfaceScenes/menu.gd" id="1_7g5e7"]
[ext_resource type="Texture2D" uid="uid://dhx2uhiyi7nlf" path="res://Images/Logo.png" id="1_bn0yu"]
[ext_resource type="Texture2D" uid="uid://bpreidmm8kauh" path="res://Images/bt1.png" id="2_1pc4n"]
[ext_resource type="Texture2D" uid="uid://coyk1h8tyfsqp" path="res://Images/BackGround.png" id="2_l5s37"]
[ext_resource type="Texture2D" uid="uid://bjn6xuahikafk" path="res://Images/bt2.png" id="3_ba0ss"]
[ext_resource type="Texture2D" uid="uid://t02bb56x5hxr" path="res://Images/bt3.png" id="4_jbq26"]
[ext_resource type="FontFile" uid="uid://dlvm4hkwfcv3g" path="res://Fonts/depixel/DePixelHalbfett.otf" id="6_skumo"]
[ext_resource type="Texture2D" uid="uid://cqstt2dwinyno" path="res://Images/icon_monochrome_dark.png" id="7_6fhuc"]
[ext_resource type="PackedScene" uid="uid://duvqwf2ut56u4" path="res://Code/InterfaceScenes/transition.tscn" id="9_imm72"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_xmvnn"]
bg_color = Color(0.129412, 0.227451, 0.356863, 1)
border_width_left = 10
border_width_top = 10
border_width_right = 10
border_width_bottom = 10
border_color = Color(0.0784314, 0.164706, 0.298039, 1)

[node name="Menu" type="Node2D"]
script = ExtResource("1_7g5e7")

[node name="BGPH2" type="ColorRect" parent="."]
offset_right = 1080.0
offset_bottom = 720.0
color = Color(0.0117647, 0.0431373, 0.101961, 1)

[node name="BackGround" type="TextureRect" parent="."]
texture_filter = 1
offset_right = 1080.0
offset_bottom = 720.0
texture = ExtResource("2_l5s37")

[node name="Button1PH" type="ColorRect" parent="."]
offset_left = 400.0
offset_top = 280.0
offset_right = 720.0
offset_bottom = 360.0

[node name="Button1PH2" type="ColorRect" parent="."]
offset_left = 400.0
offset_top = 520.0
offset_right = 720.0
offset_bottom = 600.0

[node name="Button1PH3" type="ColorRect" parent="."]
offset_left = 400.0
offset_top = 400.0
offset_right = 720.0
offset_bottom = 480.0

[node name="TitlePH" type="ColorRect" parent="."]
visible = false
offset_left = 360.0
offset_top = 80.0
offset_right = 760.0
offset_bottom = 200.0
color = Color(1, 0.294118, 0.239216, 1)

[node name="Title" type="Sprite2D" parent="."]
texture_filter = 1
position = Vector2(560, 144)
texture = ExtResource("1_bn0yu")

[node name="Button" type="Button" parent="."]
texture_filter = 1
offset_left = 360.0
offset_top = 264.0
offset_right = 768.0
offset_bottom = 372.0
icon = ExtResource("2_1pc4n")
flat = true

[node name="Button2" type="Button" parent="."]
texture_filter = 1
offset_left = 360.0
offset_top = 384.0
offset_right = 768.0
offset_bottom = 492.0
icon = ExtResource("3_ba0ss")
flat = true

[node name="Button3" type="Button" parent="."]
texture_filter = 1
offset_left = 360.0
offset_top = 504.0
offset_right = 768.0
offset_bottom = 612.0
icon = ExtResource("4_jbq26")
flat = true

[node name="ColorRect" type="Panel" parent="."]
visible = false
offset_left = 240.0
offset_top = 240.0
offset_right = 880.0
offset_bottom = 640.0
theme_override_styles/panel = SubResource("StyleBoxFlat_xmvnn")

[node name="RichTextLabel" type="Label" parent="ColorRect"]
layout_mode = 0
offset_top = 16.0
offset_right = 640.0
offset_bottom = 40.0
theme_override_fonts/font = ExtResource("6_skumo")
theme_override_font_sizes/font_size = 21
text = "AOQuest"
horizontal_alignment = 1

[node name="RichTextLabel2" type="Label" parent="ColorRect"]
layout_mode = 0
offset_left = 72.0
offset_top = 72.0
offset_right = 568.0
offset_bottom = 344.0
theme_override_fonts/font = ExtResource("6_skumo")
theme_override_font_sizes/font_size = 14
text = "Programação: Guilherme Sousa

Arte: Guilherme Sousa

Textos (Falas): Savio Mendes

Textos (Teoria): Gabriela Tuzaki, Jamil Mansur

Fundamentação Teórica: Gabriela Tuzaki, Guilherme Sousa, Jamil Mansur, Savio Mendes"
horizontal_alignment = 1
autowrap_mode = 3

[node name="RichTextLabel3" type="Label" parent="ColorRect"]
offset_top = 368.0
offset_right = 640.0
offset_bottom = 384.0
theme_override_fonts/font = ExtResource("6_skumo")
theme_override_font_sizes/font_size = 10
text = "Desenvolvido em Godot Engine 4.2"
horizontal_alignment = 1

[node name="Sprite2D" type="Sprite2D" parent="ColorRect"]
position = Vector2(608, 368)
scale = Vector2(0.03, 0.03)
texture = ExtResource("7_6fhuc")

[node name="Transition" parent="." instance=ExtResource("9_imm72")]
visible = false

[connection signal="pressed" from="Button" to="." method="_on_button_pressed"]
[connection signal="pressed" from="Button3" to="." method="_on_button_3_pressed"]
[connection signal="mouse_exited" from="ColorRect" to="." method="_on_color_rect_mouse_exited"]
